--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "ai": "^3.3.26",
+    "@ai-sdk/openai": "^0.0.58",
+    "ai": "^3.3.28",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
