--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^0.0.47",
     "@ai-sdk/openai": "^0.0.58",
     "ai": "^3.3.28",
     "next": "14.2.7",
