--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-csv": "^1.1.10",
     "ai": "^3.3.28",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-csv": "^2.2.2",
     "react-dom": "^18",
