--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^0.0.47",
     "@ai-sdk/openai": "^0.0.58",
+    "@auth/prisma-adapter": "^2.5.0",
     "@prisma/client": "^5.20.0",
     "@types/react-csv": "^1.1.10",
     "ai": "^3.3.28",
