--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@prisma/client": "^5.20.0",
     "@types/react-csv": "^1.1.10",
     "ai": "^3.3.28",
-    "next": "14.2.7",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.13",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-csv": "^2.2.2",
     "react-dom": "^18",
