--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-csv": "^2.2.2",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
