--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "stripe": "^16.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
