--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
     "@prisma/client": "^5.20.0",
     "@types/react-csv": "^1.1.10",
     "ai": "^3.3.28",
+    "clsx": "^2.1.1",
     "loops": "^3.3.0",
     "next": "^14.2.13",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-csv": "^2.2.2",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "stripe": "^16.12.0",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
