--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@ai-sdk/google": "^0.0.47",
     "@ai-sdk/openai": "^0.0.58",
     "@auth/prisma-adapter": "^2.5.0",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^5.20.0",
     "@types/react-csv": "^1.1.10",
     "ai": "^3.3.28",
